# fucktorio

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  TASKS.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: plan.md  settings.json
.config/: nextest.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.playwright-cli/: page-2026-03-28T09-56-51-350Z.yml  page-2026-03-28T09-59-33-775Z.yml  page-2026-03-28T09-59-40-706Z.yml  page-2026-03-28T10-41-16-811Z.yml  (+9 more)
crates/core/: Cargo.toml
crates/core/data/: recipes.json
crates/core/examples/: diagnose_junctions.rs  dump_layout.rs  trace_junction.rs
crates/core/src/: analysis.rs  astar.rs  blueprint.rs  blueprint_parser.rs  common.rs  fixture.rs  lib.rs  models.rs  recipe_db.rs  sat.rs  snapshot.rs  solver.rs  trace.rs  zone_cache.rs
crates/core/src/bus/: balancer.rs  balancer_library.rs  bus_router.rs  ghost_occupancy.rs  ghost_router.rs  junction.rs  junction_cost.rs  junction_sat_strategy.rs  junction_solver.rs  lane_order.rs  lane_planner.rs  layout.rs  mod.rs  output_merger.rs  placer.rs  plan.rs  region_walker.rs  tapoff_search.rs  templates.rs  trunk_renderer.rs
crates/core/src/validate/: belt_flow.rs  belt_structural.rs  fluids.rs  inserters.rs  mod.rs  power.rs  underground.rs
crates/core/tests/: e2e.rs  junction_fixtures.rs  sat_fixtures.rs  sat_pins.rs
crates/core/tests/sat_fixtures/: README.md  sample_electronic_circuit.json
crates/wasm-bindings/: Cargo.toml
crates/wasm-bindings/src/: lib.rs
rust_src/: lib.rs
(+192 files in other folders)
