[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fucktorio"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "factorio-draftsman>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.maturin]
module-name = "fucktorio_native"
manifest-path = "crates/pyo3-bindings/Cargo.toml"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
