[package]
name = "fucktorio_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm = ["dep:tsify-next", "dep:wasm-bindgen"]

[dependencies]
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tsify-next = { version = "0.5", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
