[package]
name = "fucktorio_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
fucktorio_core = { path = "../core", features = ["wasm"] }
js-sys = "0.3"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
